--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     border-radius:10px;padding:8px 10px;outline:none
   }
   input[type="number"]{width:120px}
+  input[type="range"]{width:180px}
   button{
     background:var(--btn);border:1px solid #2a3156;color:var(--text);padding:9px 12px;border-radius:11px;
     cursor:pointer;transition:.15s;user-select:none
@@ -46,11 +47,9 @@
   .dot{width:10px;height:10px;border-radius:50%}
   @media (max-width:980px){ .container{grid-template-columns:1fr} }
 
-  /* canvases stack */
   .stage{position:relative;display:inline-block}
   #canvas,#overlay{display:block}
   #overlay{position:absolute; left:0; top:0; pointer-events:none; z-index:3;}
-  /* probe tooltip */
   #probe{position:absolute;display:none;transform:translate(10px,-10px);
          background:#0e1329;border:1px solid #2a3156;border-radius:10px;padding:6px 8px;
          color:#e8ecf1;font:600 13px ui-monospace,monospace;pointer-events:none;z-index:4;
@@ -58,7 +57,6 @@
   #probe .sw{display:inline-block;width:10px;height:10px;border-radius:50%;margin-right:6px;border:1px solid #0006}
   #probe .sub{font-weight:500;color:#9aa4b2;margin-top:2px}
 
-  /* mode picker overlay (startup) */
   #modePicker{
     position:fixed; inset:0; background:linear-gradient(180deg, rgba(5,8,22,.85), rgba(10,14,34,.85));
     display:flex; align-items:center; justify-content:center; z-index:80;
@@ -72,7 +70,6 @@
   .pickBtn{flex:1;min-width:180px;padding:16px;border-radius:14px;border:1px solid #2a3156;background:#1b2141;color:#e8ecf1;cursor:pointer}
   .pickBtn:hover{transform:translateY(-1px);box-shadow:0 6px 20px rgba(0,0,0,.35)}
   .pickHint{font-size:12px;color:#9aa4b2;margin-top:10px}
-  /* Survey placeholder */
   .surveyBlank{
     background:#ffffff;border-radius:12px;border:1px dashed #cccccc; min-height:300px;
     display:flex;align-items:center;justify-content:center;color:#333;font:600 18px/1.3 ui-sans-serif,system-ui
@@ -88,7 +85,6 @@
   </div>
 </header>
 
-<!-- Startup picker -->
 <div id="modePicker">
   <div class="pickerBox">
     <h2 class="pickerTitle">เลือกโหมดการทำงาน</h2>
@@ -101,13 +97,18 @@
 </div>
 
 <div class="container" id="appPlanning" style="display:grid">
-  <!-- Left control panel (Planning) -->
   <aside class="panel">
     <div class="section">
       <div class="label">1) อัปโหลดแปลนพื้นที่ (PNG/JPG)</div>
       <div class="row">
         <input type="file" id="fileInput" accept="image/*"/>
         <button id="btnClear">ล้าง</button>
+      </div>
+      <div class="row" style="margin-top:8px">
+        <div class="label">ขนาดแปลน (%)</div>
+        <input type="range" id="imgScale" min="20" max="150" step="5" value="75"/>
+        <input type="number" id="imgScaleNum" min="20" max="150" step="1" value="75" style="width:80px"/>
+        <span class="small muted">ย่อ/ขยายเฉพาะภาพแปลน (ไม่กระทบค่าพิกัด)</span>
       </div>
     </div>
 
@@ -201,7 +202,6 @@
     </div>
   </aside>
 
-  <!-- Right workspace (Planning) -->
   <main class="panel">
     <div class="row">
       <span class="badge" id="modeBadge">โหมด: Idle</span>
@@ -219,7 +219,6 @@
   </main>
 </div>
 
-<!-- Survey mode layout (very simple blank page to extend later) -->
 <div class="container" id="appSurvey" style="display:none;grid-template-columns:1fr">
   <main class="panel" style="display:flex;flex-direction:column;gap:12px">
     <div class="row">
@@ -232,7 +231,7 @@
 
 <script>
 /* ===== app mode switch ===== */
-let appMode = 'planning'; // default
+let appMode = 'planning';
 const modePicker = document.getElementById('modePicker');
 const appPlanning = document.getElementById('appPlanning');
 const appSurvey   = document.getElementById('appSurvey');
@@ -240,7 +239,6 @@ const pillPlanning = document.getElementById('pillPlanning');
 const pillSurvey   = document.getElementById('pillSurvey');
 const pickPlanning = document.getElementById('pickPlanning');
 const pickSurvey   = document.getElementById('pickSurvey');
-
 function setMode(mode){
   appMode = mode;
   if(mode==='planning'){
@@ -261,12 +259,31 @@ pillSurvey.onclick   = ()=> setMode('survey');
 pickPlanning.onclick = ()=> setMode('planning');
 pickSurvey.onclick   = ()=> setMode('survey');
 
-/* ===== thresholds & utilities (Planning) ===== */
+/* ===== thresholds & utilities ===== */
 const RSSI_MIN=-80, RSSI_MAX=-50;
 const $=s=>document.querySelector(s);
 const clamp=(v,a,b)=>Math.max(a,Math.min(b,v));
 const dist=(a,b)=>Math.hypot(a.x-b.x,a.y-b.y);
 
+/* ===== canvases & state ===== */
+const canvas=$('#canvas'), ctx=canvas.getContext('2d',{willReadFrequently:true});
+const overlay=$('#overlay'), octx=overlay.getContext('2d',{willReadFrequently:true});
+let floorImg=null;
+let floorScale=0.75; // %/100 — ทำให้แปลนเล็กลงกว่าก่อนหน้า
+let aps=[]; let segments=[];
+let mode='idle'; let dragging=false; let dragStart=null;
+let scale={pxPerMeter:null}; let hasRendered=false;
+
+const UI={
+  modeBadge:$('#modeBadge'), scaleLabel:$('#scaleLabel'),
+  apList:$('#apList'), matList:$('#matList'),
+  legendMin:$('#legendMin'), legendMax:$('#legendMax'),
+  probe:$('#probe'), probeVal:$('#probeVal'), probeMeta:$('#probeMeta'), probeSw:$('#sw'),
+  stage:$('#stage'),
+  imgScale:$('#imgScale'), imgScaleNum:$('#imgScaleNum')
+};
+
+/* ===== helpers ===== */
 function getCanvasPos(e){
   const rect=canvas.getBoundingClientRect();
   const scaleX=canvas.width/rect.width, scaleY=canvas.height/rect.height;
@@ -295,22 +312,6 @@ for(const k of Object.keys(MATERIALS)){
 matTypeSel.value='brick'; $('#matAtt').value=MATERIALS['brick'].att;
 matTypeSel.addEventListener('change',()=>$('#matAtt').value=MATERIALS[matTypeSel.value].att);
 
-/* ===== canvases & state ===== */
-const canvas=$('#canvas'), ctx=canvas.getContext('2d',{willReadFrequently:true});
-const overlay=$('#overlay'), octx=overlay.getContext('2d',{willReadFrequently:true});
-let floorImg=null;
-let aps=[]; let segments=[];
-let mode='idle'; let dragging=false; let dragStart=null;
-let scale={pxPerMeter:null}; let hasRendered=false;
-
-const UI={
-  modeBadge:$('#modeBadge'), scaleLabel:$('#scaleLabel'),
-  apList:$('#apList'), matList:$('#matList'),
-  legendMin:$('#legendMin'), legendMax:$('#legendMax'),
-  probe:$('#probe'), probeVal:$('#probeVal'), probeMeta:$('#probeMeta'), probeSw:$('#sw'),
-  stage:$('#stage'),
-};
-
 /* ===== size sync ===== */
 function applyCanvasCSSSize(){
   canvas.style.width = canvas.width + 'px';
@@ -333,8 +334,14 @@ window.addEventListener('resize', applyCanvasCSSSize);
 /* ===== base/permanent ===== */
 function drawBase(){
   ctx.clearRect(0,0,canvas.width,canvas.height);
-  if(floorImg){ ctx.drawImage(floorImg,0,0,canvas.width,canvas.height); }
-  else{
+  if(floorImg){
+    // วาดแปลนตาม floorScale แบบกึ่งกลาง
+    const w = Math.round(canvas.width * floorScale);
+    const h = Math.round(canvas.height * floorScale);
+    const x = Math.round((canvas.width - w)/2);
+    const y = Math.round((canvas.height - h)/2);
+    ctx.drawImage(floorImg, 0,0,floorImg.width,floorImg.height, x,y,w,h);
+  }else{
     ctx.fillStyle='#0c1022'; ctx.fillRect(0,0,canvas.width,canvas.height);
     ctx.strokeStyle='#1c264a'; ctx.lineWidth=1;
     for(let x=0;x<canvas.width;x+=40){ctx.beginPath();ctx.moveTo(x,0);ctx.lineTo(x,canvas.height);ctx.stroke()}
@@ -413,8 +420,6 @@ function pathObstacleLoss(pFrom,pTo){
 }
 
 /* ===== AP model ===== */
-// RSSI(d) = P0 - 10*n*log10(d) - obstacleLoss ; d (m)
-// (ไร้ alert: ถ้าไม่มีสเกล/AP ให้คืนค่าต่ำสุดเงียบ ๆ)
 function rssiFromAPs(x,y){
   if(!aps.length) return RSSI_MIN;
   if(!scale.pxPerMeter) return RSSI_MIN;
@@ -429,7 +434,7 @@ function rssiFromAPs(x,y){
   return 10*Math.log10(Math.max(1e-15,sum_mW));
 }
 
-/* ===== heatmap render (per-pixel + blur) ===== */
+/* ===== heatmap render ===== */
 function renderHeatmap(){
   if(!floorImg) return;
   if(aps.length===0) return;
@@ -511,7 +516,8 @@ $('#btnRender').onclick =()=>{ renderHeatmap(); hideProbe(); };
 $('#btnExport').onclick =()=>{ const a=document.createElement('a'); a.download='heatmap.png'; a.href=canvas.toDataURL('image/png'); a.click(); };
 
 $('#btnSave').onclick=()=>{
-  const payload={ aps, segments, alpha:+($('#alpha').value||0.6), blurPx:+($('#blurPx').value||16), scale:scale.pxPerMeter };
+  const payload={ aps, segments, alpha:+($('#alpha').value||0.6), blurPx:+($('#blurPx').value||16),
+                  scale:scale.pxPerMeter, floorScale };
   download('heatmap_project_planning.json', JSON.stringify(payload,null,2));
 };
 $('#loadJson').addEventListener('change', e=>{
@@ -523,6 +529,9 @@ $('#loadJson').addEventListener('change', e=>{
       aps=obj.aps||[]; segments=obj.segments||[];
       $('#alpha').value=obj.alpha??0.6; $('#blurPx').value=obj.blurPx??16;
       scale.pxPerMeter=obj.scale||null;
+      floorScale = clamp(obj.floorScale ?? floorScale, 0.2, 1.5);
+      UI.imgScale.value = Math.round(floorScale*100);
+      UI.imgScaleNum.value = Math.round(floorScale*100);
       $('#scaleLabel').textContent=scale.pxPerMeter?`${(scale.pxPerMeter).toFixed(1)} px/เมตร`:'ยังไม่ตั้ง';
       drawBase(); if(hasRendered) renderHeatmap(); else drawPermanent();
       refreshAPList(); refreshMatList();
@@ -531,7 +540,15 @@ $('#loadJson').addEventListener('change', e=>{
   reader.readAsText(f);
 });
 
-/* ===== drag on canvas (draw temp on overlay) ===== */
+/* ===== image I/O ===== */
+$('#fileInput').addEventListener('change', e=>{
+  const f=e.target.files[0]; if(!f) return;
+  const img=new Image(); img.onload=()=>{ floorImg=img; fitCanvasToImage(img); drawBase(); drawPermanent(); };
+  img.src=URL.createObjectURL(f);
+});
+$('#btnClear').onclick=()=>{ floorImg=null; drawBase(); drawPermanent(); };
+
+/* ===== drag on canvas ===== */
 function startDrag(x,y){ dragging=true; dragStart={x,y}; clearOverlay(); }
 function updateDrag(x,y){
   if(!dragging||!dragStart) return;
@@ -602,4 +619,28 @@ canvas.addEventListener('click', e=>{
 /* keyboard (Planning) */
 document.addEventListener('keydown', e=>{
   if(appMode!=='planning') return;
-  if(e.key==='s'||e.key
+  if(e.key==='s'||e.key==='S'){ mode='scale'; $('#modeBadge').textContent='โหมด: ตั้งสเกล'; hideProbe(); }
+  if(e.key==='a'||e.key==='A'){ mode='ap';    $('#modeBadge').textContent='โหมด: วาง AP (คลิก)'; hideProbe(); }
+  if(e.key==='w'||e.key==='W'){ mode='mat';   $('#modeBadge').textContent='โหมด: วัสดุ (ลากเส้น)'; hideProbe(); }
+  if(e.key==='h'||e.key==='H'){ renderHeatmap(); hideProbe(); }
+});
+
+/* ===== floor scale controls ===== */
+function setFloorScaleFromInput(v){
+  const pct = clamp(parseInt(v,10)||75, 20, 150);
+  UI.imgScale.value = pct;
+  UI.imgScaleNum.value = pct;
+  floorScale = pct/100;
+  drawBase(); if(hasRendered) renderHeatmap(); else drawPermanent();
+}
+UI.imgScale.addEventListener('input', e=> setFloorScaleFromInput(e.target.value));
+UI.imgScaleNum.addEventListener('input', e=> setFloorScaleFromInput(e.target.value));
+
+/* ===== init ===== */
+(function init(){
+  applyCanvasCSSSize();
+  drawBase(); drawPermanent();
+})();
+</script>
+</body>
+</html>
